# CryoMamba

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  SETUP.md  cryomamba.db  dev.py  docker-compose.yml  requirements.txt  run_e2e_tests.py  sitecustomize.py  test.py  test_preview_functionality.py  test_server.py  test_websocket_behavior.py  validate_setup.py
.ai/: story-5.4-dod-assessment.md
.bmad-core/: install-manifest.yaml
.github/workflows/: desktop-build.yml
app/: __init__.py  config.py  main.py  middleware.py
app/models/: __init__.py  job.py  preview.py  upload.py
app/routes/: gpu.py  health.py  info.py  jobs.py  uploads.py  websocket.py
app/services/: database.py  gpu_error_handler.py  gpu_memory_manager.py  gpu_monitor.py  gpu_performance_optimizer.py  gpu_scheduler.py  nnunet_wrapper.py  orchestrator.py  (+3 more)
docs/: API_REFERENCE.md  CONTRIBUTING.md  CryoMamba_Architecture.md  CryoMamba_PRD.md  TROUBLESHOOTING.md  USER_GUIDE.md
napari_cryomamba/: Info.plist  Makefile  README.md  build-requirements.txt  build.py  create_icons.py  create_installers.py  cryomamba.spec  main.py  optimize_deps.py  pyproject.toml  requirements.txt  sign.py  test_build.py  validate_deps.py  widget.py
napari_cryomamba/napari_cryomamba/: __init__.py  export_service.py  websocket_client.py  widget.py
napari_cryomamba/napari_cryomamba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
napari_cryomamba/tests/: test_widget.py
test_data_new/: dataset.json
test_data_new_mrc/: conversion_summary.json  predict_from_raw_data_args.json
tests/: test_e2e_integration.py  test_nnunet_model.py  test_server_simple.py  test_websocket.py
(+62 files in other folders)
